@@ -17,41 +17,49 @@
 package com.echothree.control.user.item.server.command;
 
 import com.echothree.control.user.item.common.form.GetItemPriceTypesForm;
-import com.echothree.control.user.item.common.result.GetItemPriceTypesResult;
 import com.echothree.control.user.item.common.result.ItemResultFactory;
 import com.echothree.model.control.item.server.control.ItemControl;
+import com.echothree.model.data.item.server.entity.ItemPriceType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetItemPriceTypesCommand
-        extends BaseSimpleCommand<GetItemPriceTypesForm> {
-    
+        extends BaseMultipleEntitiesCommand<ItemPriceType, GetItemPriceTypesForm> {
+
+    // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of(
+        );
     }
-    
+
     /** Creates a new instance of GetItemPriceTypesCommand */
     public GetItemPriceTypesCommand(UserVisitPK userVisitPK, GetItemPriceTypesForm form) {
         super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<ItemPriceType> getEntities() {
         var itemControl = Session.getModelController(ItemControl.class);
-        GetItemPriceTypesResult result = ItemResultFactory.getGetItemPriceTypesResult();
-        
-        result.setItemPriceTypes(itemControl.getItemPriceTypeTransfers(getUserVisit()));
-        
+
+        return itemControl.getItemPriceTypes();
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<ItemPriceType> entities) {
+        var result = ItemResultFactory.getGetItemPriceTypesResult();
+        var itemControl = Session.getModelController(ItemControl.class);
+        var userVisit = getUserVisit();
+
+        result.setItemPriceTypes(itemControl.getItemPriceTypeTransfers(userVisit, entities));
+
         return result;
     }
-    
+
 }
